src/objects/Training_Contact_Role_Details__c.object
<CustomObject>
    <description>Contains information of the Training Student Contact</description>
    <fields>
        <fullName>ATC_ID__c</fullName>
        <description>Accredited training center ID</description>
        <inlineHelpText>Accredited training center ID</inlineHelpText>
        <label>ATC ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC__c</fullName>
        <description>Name of the accredited center school</description>
        <inlineHelpText>Name of the accredited center school</inlineHelpText>
        <label>ATC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connection to the Account Contact Role record</description>
        <inlineHelpText>Connection to the Account Contact Role record</inlineHelpText>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role__c</referenceTo>
        <relationshipLabel>Training Contact Details</relationshipLabel>
        <relationshipName>Training_Contact_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <description>Populated by a workflow rule when the City Reference is changed.</description>
        <inlineHelpText>Populated by a workflow rule when the City Reference is changed.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>City Reference</description>
        <inlineHelpText>City Reference</inlineHelpText>
        <label>City Reference</label>
        <referenceTo>IATA_ISO_City__c</referenceTo>
        <relationshipLabel>TCRD City</relationshipLabel>
        <relationshipName>TCRD_City</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country Reference</description>
        <inlineHelpText>Country Reference</inlineHelpText>
        <label>Country Reference</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>TCRD Country</relationshipLabel>
        <relationshipName>TCRD_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Populated by a workflow rule when the Country Reference is changed.</description>
        <inlineHelpText>Populated by a workflow rule when the Country Reference is changed.</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Address__c</fullName>
        <description>PO Box Address</description>
        <inlineHelpText>PO Box Address</inlineHelpText>
        <label>PO Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Course__c</fullName>
        <description>Training Preferred Course</description>
        <inlineHelpText>Training Preferred Course</inlineHelpText>
        <label>Preferred Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>Populated by a workflow rule when the State Reference is changed.</description>
        <inlineHelpText>Populated by a workflow rule when the State Reference is changed.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State Reference</description>
        <inlineHelpText>State Reference</inlineHelpText>
        <label>State Reference</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>TCRD State</relationshipLabel>
        <relationshipName>TCRD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <inlineHelpText>Street</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>Training User Id</description>
        <inlineHelpText>Training User Id</inlineHelpText>
        <label>UserId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Training Username</description>
        <inlineHelpText>Training Username</inlineHelpText>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Training Contact Role Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UserId__c</columns>
        <columns>Username__c</columns>
        <columns>Preferred_Course__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account_Contact_Role__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCRD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Contact Role Details</pluralLabel>
    <recordTypes>
        <fullName>Yardstick_Trainee</fullName>
        <active>true</active>
        <description>Yardstick Trainee</description>
        <label>Yardstick Trainee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>